--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -129,3 +129,14 @@ nav{
 .borderbottom{
   border-bottom: 3px solid rgb(255, 255, 255);
 }
+.fontresize{
+  font-size: 30px;
+}
+@media(max-width:768px){
+  .LoginBox{
+    transform: scale(0.8);
+  }
+  .fontresize{
+    font-size: 24px;
+  }
+}
