--- a/frontend/src/styles/listarea.css
+++ b/frontend/src/styles/listarea.css
@@ -26,6 +26,7 @@
     border-bottom: 1px solid rgb(215, 215, 215);
     margin: 10px 20px;
     padding: 10px 0px;
+    width: 90%;
 }
 .ProfileItems img{
     aspect-ratio: 1/1;
@@ -39,4 +40,9 @@
 .name_area h3 {
     font-weight: 800;
     font-size: 16px;
+}
+@media(max-width:768px){
+    .ListArea{
+        width: 100vw;
+    }
 }
