--- a/frontend/src/styles/listarea.css
+++ b/frontend/src/styles/listarea.css
@@ -48,4 +48,99 @@
 }
 
 /* skeleton loading  */
+:root {
+    --loader-background-color: #EEEEEE;
+    --loader-highlight-color: #DEDEDE;
+}
 
+body {
+    font-family: Arial, sans-serif;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    background-color: #f0f0f0;
+}
+
+.card {
+    background-color: #fff;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    /* border-radius: -1px; */
+    padding: 4px;
+    text-align: center;
+}
+
+.first-loader {
+    width: 70px;
+    height: 13px;
+    background: linear-gradient(90deg, var(--loader-background-color) 25%, var(--loader-highlight-color) 50%, var(--loader-background-color) 75%);
+    background-size: 200% 100%;
+    animation: loading 2s infinite ease-in-out;
+    border-radius: 8px;
+    margin-bottom: 20px;
+    float: inline-end;
+    position: relative;
+    bottom: 46px;
+    right: 21px;
+}
+.second-loader {
+    width: 70px;
+    height: 13px;
+    background: linear-gradient(90deg, var(--loader-background-color) 25%, var(--loader-highlight-color) 50%, var(--loader-background-color) 75%);
+    background-size: 200% 100%;
+    animation: loading 2s infinite ease-in-out;
+    border-radius: 8px;
+    margin-bottom: 20px;
+    float: inline-end;
+    position: relative;
+    bottom: 31px;
+    right: 158px;
+}
+
+.third-loader {
+        width: 101px;
+        height: 20px;
+        background: linear-gradient(90deg, var(--loader-background-color) 25%, var(--loader-highlight-color) 50%, var(--loader-background-color) 75%);
+        background-size: 200% 100%;
+        animation: loading 2s infinite ease-in-out;
+        border-radius: 8px;
+        margin-bottom: 20px;
+        float: inline-start;
+        position: relative;
+        bottom: 59px;
+        left: 92px;
+}
+
+.avatar-skeleton {
+    width: 53px;
+    height: 53px;
+    background: linear-gradient(90deg, var(--loader-background-color) 25%, var(--loader-highlight-color) 50%, var(--loader-background-color) 75%);
+    background-size: 200% 100%;
+    animation: loading 2s infinite ease-in-out;
+    border-radius: 50%;
+    margin-bottom: 20px;
+    left: 17px;
+    top: 10px;
+    position: relative;
+}
+
+.cover-image-skeleton {
+    width: 300px;
+    height: 200px;
+    background: linear-gradient(90deg, var(--loader-background-color) 25%, var(--loader-highlight-color) 50%, var(--loader-background-color) 75%);
+    background-size: 200% 100%;
+    animation: loading 2s infinite ease-in-out;
+    border-radius: 8px;
+    margin-bottom: 20px;
+}
+
+@keyframes loading {
+    0% {
+        background-position: 200% 0;
+    }
+    100% {
+        background-position: -200% 0;
+    }
+}
