--- a/frontend/src/styles/navbar.css
+++ b/frontend/src/styles/navbar.css
@@ -20,7 +20,7 @@
         bottom: 0;
         left: 0px;
         width: 100vw;
-        background-color: black;
+        background-color: #000;
         height: 60px;
         display: flex;
     }
