--- a/frontend/src/components/form.css
+++ b/frontend/src/components/form.css
@@ -15,11 +15,11 @@ body{
 }
 
 .sign-in-form{
-    margin: 2rem auto;
+    margin: 0rem auto;
     display: flex;
     flex-direction: column;
     max-width: 390px;
-    margin-top: 8rem;
+    /* margin-top: 8rem; */
 }
 .title {
     font-weight: bolder;
@@ -70,7 +70,7 @@ body{
     /* margin-left: 5rem; */
  }
 .no-account a {
-    color: #ff5b78;
+    color: var(--primary);
     padding: 3px 3px;
     text-decoration: underline;
  }
